remove toolbar slim

--- a/src/app/layout/main-nav/main-nav.component.html
+++ b/src/app/layout/main-nav/main-nav.component.html
@@ -12,7 +12,7 @@
 
   </mat-sidenav>
 
-  <mat-sidenav-content fxLayout="column" style="overflow-x:hidden" class="h-100">
+  <mat-sidenav-content fxLayout="column" style="overflow-x:hidden" class="h-100 bg-primary-light">
 
     <app-main-top-nav-wrapper [config]="config" (toggleDrawer)="toggleDrawer()">
     </app-main-top-nav-wrapper>
