--- a/src/app/mission-modules/mission-image-list/image-viewer/image-viewer.component.html
+++ b/src/app/mission-modules/mission-image-list/image-viewer/image-viewer.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar #imageToolBar class="toolbar-slim image-toolbar color-accent" fxLayout="row" fxLayoutAlign="space-between center"
+<mat-toolbar #imageToolBar class="image-toolbar color-accent" fxLayout="row" fxLayoutAlign="space-between center"
 [@showHideToolbar]="toolbarHidden ? 'hide' : 'show'">
     <button mat-icon-button aria-label="Lukk" (click)="finished()">
         <mat-icon class="scale-150">chevron_left</mat-icon>
