--- a/src/app/shared/components/simple-top-nav/simple-top-nav.component.html
+++ b/src/app/shared/components/simple-top-nav/simple-top-nav.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar *ngIf="config" class="toolbar-slim mat-elevation-z2"
+<mat-toolbar *ngIf="config" class="mat-elevation-z2"
     [ngClass]="config.colorClass ? config.colorClass : 'bg-accent'">
     <app-button [config]="config.leftBtn | transformButton : ButtonTypes.Icon"></app-button>
 
