--- a/src/app/shared/components/main-top-nav/main-top-nav.component.html
+++ b/src/app/shared/components/main-top-nav/main-top-nav.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar #navBar class="toolbar-slim bg-primary mat-elevation-z4 color-foreground" *ngIf="config">
+<mat-toolbar #navBar class="bg-primary mat-elevation-z4 color-foreground" *ngIf="config">
 
   <ng-container *ngIf="searchBarHidden || !config?.searchBar else searchBarContent">
     <app-button *ngIf="config?.backFn else menuBtn" [config]="{
