--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -55,7 +55,7 @@ body {font-family: Roboto, "Helvetica Neue", sans-serif;overflow-x:hidden;}
 
 .flex-spacer{flex: 1 1 auto;} //unnused
 
-.max-width{max-width:600px!important;}
+.max-width{max-width:600px!important;margin:auto}
 
 .extended-dialog{max-width:90vw!important}
 
