--- a/src/app/layout/main-nav/main-nav.component.html
+++ b/src/app/layout/main-nav/main-nav.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container class="bg-background h-100" *ngIf="config$ | async; let config">
+<mat-sidenav-container class="h-100" *ngIf="config$ | async; let config">
 
   <mat-sidenav fixedInViewport #drawer *ngIf="config" class="mat-elevation-z4 bg-primary" style="max-width:250px;min-width:200px"
   [attr.role]="config.isXs ? 'dialog' : 'navigation'"
@@ -12,7 +12,7 @@
 
   </mat-sidenav>
 
-  <mat-sidenav-content fxLayout="column" style="overflow-x:hidden" class="h-100 bg-primary-light">
+  <mat-sidenav-content fxLayout="column" style="overflow-x:hidden;" class="h-100 bg-primary-light">
 
     <app-main-top-nav-wrapper [config]="config" (toggleDrawer)="toggleDrawer()">
     </app-main-top-nav-wrapper>
