new form actions component for all forms with cancel option

--- a/src/app/data-management/components/document-type-form-view/document-type-form-view.component.html
+++ b/src/app/data-management/components/document-type-form-view/document-type-form-view.component.html
@@ -6,9 +6,10 @@
     </mat-error>
   </mat-form-field>
 
-  <button mat-raised-button class="w-100" color="primary" 
-    [disabled]="form.invalid || form.pristine"
-    (click)="onSubmit()">
-    Lagre   
-  </button>
+  <app-form-actions 
+    [submitDisabled]="form.pristine || form.invalid" 
+    [submitText]="isCreateForm ? 'Legg til' : 'Oppdater'" 
+    (submitted)="onSubmit()" 
+    (canceled)="formSubmitted.emit(null)">
+  </app-form-actions>
 </form>
