--- a/src/app/profile/password-form/password-form-view/password-form-view.component.html
+++ b/src/app/profile/password-form/password-form-view/password-form-view.component.html
@@ -29,9 +29,10 @@
     {{ this.error }}
   </mat-error>
   <br />
-
-  <button mat-raised-button class="w-100" color="primary"
-    [disabled]="passwordForm.invalid || passwordForm.pristine" (click)="onSubmit()">
-    Lagre
-  </button>
+  
+  <app-form-actions submitText="Oppdater" 
+    [submitDisabled]="passwordForm.pristine || passwordForm.invalid"    
+    (submitted)="onSubmit()" 
+    (canceled)="formSubmitted.emit(null)">
+  </app-form-actions>
 </form>
