--- a/src/app/mission-modules/mission-form/mission-form-view/mission-form-view.component.html
+++ b/src/app/mission-modules/mission-form/mission-form-view/mission-form-view.component.html
@@ -2,6 +2,7 @@
   <mat-form-field>
     <input ngx-google-places-autocomplete [options]='googleOptions' #placesRef="ngx-places"
       (onAddressChange)="handleAddressChange($event)" matInput placeholder="Adresse" formControlName="address" required>
+    <mat-hint>F.eks. Furuberget 17, 1940 Bjørkelangen</mat-hint>
     <mat-error *ngIf="this.address.invalid">
       Adresse er ett obligatorisk felt på maks 100 tegn.
     </mat-error>
@@ -17,8 +18,9 @@
   <mat-form-field>
     <textarea matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize" placeholder="Beskrivelse"
       formControlName="description">
-              </textarea>
-    <mat-error *ngIf="this.description.invalid">
+              </textarea>  
+    <mat-hint>{{description.value?.length}} / 400 tegn</mat-hint>
+    <mat-error *ngIf="description.invalid">
       Beskrivelse er på maks 400 tegn.
     </mat-error>
   </mat-form-field>
@@ -30,7 +32,7 @@
       <mat-option *ngFor="let employer of config?.foreigns?.employers" [value]="employer.name">
         {{employer.name}}
       </mat-option>
-    </mat-autocomplete>
+    </mat-autocomplete>   
   </mat-form-field>
 
   <mat-form-field formGroupName="missionType">
@@ -45,10 +47,11 @@
 
   <mat-checkbox *ngIf="!isCreateForm" formControlName="finished" color="primary" class="mb-2">Er oppdraget ferdig?</mat-checkbox>
 
-  <button mat-raised-button class="w-100" color="primary" 
-    [disabled]="form.invalid || (form.pristine)"
-    (click)="onSubmit()">
-    {{ isCreateForm ? 'Legg til' : 'Oppdater' }}    
-  </button>
+  <app-form-actions 
+    [submitDisabled]="form.pristine || form.invalid" 
+    [submitText]="isCreateForm ? 'Legg til' : 'Oppdater'" 
+    (submitted)="onSubmit()" 
+    (canceled)="formSubmitted.emit(null)">
+  </app-form-actions>
 
 </form>
