--- a/src/app/shared/components/mail-to-form-view/mail-to-form-view.component.html
+++ b/src/app/shared/components/mail-to-form-view/mail-to-form-view.component.html
@@ -8,11 +8,11 @@
             Pass på at eposten er skrevet riktig.
         </mat-error>
     </mat-form-field>
-    
-    <button mat-raised-button class="w-100" color="primary" 
-        [disabled]="mailToForm.invalid"
-        (click)="onSubmit()">
-        Send   
-    </button>
+
+    <app-form-actions submitText="Send" 
+        [submitDisabled]="mailToForm.pristine || mailToForm.invalid" 
+        (submitted)="onSubmit()" 
+        (canceled)="formSubmitted.emit(null)">
+    </app-form-actions>
   
 </form>
