--- a/src/app/users/new-password-form/new-password-form-view/new-password-form-view.component.html
+++ b/src/app/users/new-password-form/new-password-form-view/new-password-form-view.component.html
@@ -25,9 +25,11 @@
     {{ this.error }}
   </mat-error>
   <br />
+  
+  <app-form-actions submitText="Oppdater" 
+    [submitDisabled]="passwordForm.pristine || passwordForm.invalid" 
+    (submitted)="onSubmit()" 
+    (canceled)="formSubmitted.emit(null)">
+  </app-form-actions>
 
-  <button mat-raised-button class="w-100" color="primary"
-    [disabled]="passwordForm.invalid || passwordForm.pristine" (click)="onSubmit()">
-    Lagre
-  </button>
 </form>
