sortbybool helper & sorting documents and ntoes

--- a/src/app/mission-modules/mission-note-form/mission-note-form-view/mission-note-form-view.component.html
+++ b/src/app/mission-modules/mission-note-form/mission-note-form-view/mission-note-form-view.component.html
@@ -16,7 +16,7 @@
     </mat-error>
   </mat-form-field>
   <br />
-  <mat-checkbox formControlName="pinned">Viktig?</mat-checkbox>
+  <mat-checkbox color="primary" formControlName="pinned">Viktig?</mat-checkbox>
   <br />
 
   <app-form-actions 
