--- a/src/app/mission-modules/mission-document-list/mission-document-list/mission-document-list.component.html
+++ b/src/app/mission-modules/mission-document-list/mission-document-list/mission-document-list.component.html
@@ -13,7 +13,7 @@
         <div>{{ entity.documentType?.name }}</div>
 
         <div class="mat-caption">Filtype: {{ entity.fileName | fileExtension | uppercase }}</div>
-        <div class="mat-caption">Lastet opp 21.mai 2020</div>
+        <div class="mat-caption">Lastet opp {{ entity.updatedAt | date : 'dd.MMM yyyy' }}</div>
     </div>
 </ng-template>
 
