--- a/src/app/mission-modules/mission-note-list/mission-note-list/note-card/note-card.component.html
+++ b/src/app/mission-modules/mission-note-list/mission-note-list/note-card/note-card.component.html
@@ -26,7 +26,7 @@
     <span class="w-100" fxLayout="row" fxLayoutAlign="space-between center">
 
         <span>
-            {{ note.updatedAt | date: 'dd.MMM' }} av {{ note.createdBy || "Anonym" }}
+            {{ note.updatedAt | date: 'dd.MMM yyyy' }} {{ note.createdBy ? ("av " + note.createdBy) : "" }}
         </span>
 
         <ng-container *ifRole="RolePresets.Authority">
