--- a/src/app/shared/components/main-top-nav/main-top-nav.component.html
+++ b/src/app/shared/components/main-top-nav/main-top-nav.component.html
@@ -1,56 +1,25 @@
-<mat-toolbar #navBar class="bg-primary mat-elevation-z4 color-foreground" *ngIf="config">
+<div fxLayout="column" class="h-100" style="position:relative">
 
-  <ng-container *ngIf="searchBarHidden || !config?.searchBar else searchBarContent">
-    <app-button *ngIf="config?.backFn else menuBtn" [config]="{
-        callback: config.backFn, 
-        params: config.backFnParams,
-        type: ButtonTypes.Icon,
-        aria: 'Tilbake',
-        icon: 'chevron_left',
-        iconSizeClass: 'scale-150'}">
-    </app-button>
+  <app-detail-top-nav-bar *ngIf="config && (config.longTitle || config.imgSrc) else mainTopBar" 
+    [config]="config">
+  </app-detail-top-nav-bar>
 
-    <ng-template #menuBtn>
-      <button mat-icon-button aria-label="Toggle sidenav" (click)="onMenuButtonClick()" fxHide fxShow.xs>
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
-    </ng-template>
+  <ng-template #mainTopBar>
+    <app-main-top-nav-bar [config]="config" stylingClass="bg-primary"></app-main-top-nav-bar>
+  </ng-template>
 
-    <span class="mr-auto">
-      <ng-container>
-        <span *ngIf="!config?.backFn else noLinkTitle" ngClass.xs="ml-1" ngClass.gt-xs="ml-2"
-          [routerLink]="['/hjem']">{{ config?.title || "Hjem" }}</span>
-        <ng-template #noLinkTitle><span ngClass.xs="ml-1" ngClass.gt-xs="ml-2">{{ config.title }}</span></ng-template>
-      </ng-container>
-      <mat-icon *ngIf="config?.subIcon" class="scale-75">{{ config.subIcon }}</mat-icon>
-      <span class="ml-1 mat-caption">{{ config?.subTitle }}</span>
-    </span>
+  <div fxFlex style="overflow-y:auto;">
+    <ng-content>
+  
+    </ng-content>
+  </div>
 
-    <mat-spinner *ngIf="loading$ |  async" diameter="24" color="accent" class="mr-2"></mat-spinner>
+  <div style="position:absolute;right:0;bottom:0;" class="m-2" *ngIf="config.fabs"
+      fxLayout="column" fxLayoutGap="4px">  
+      <app-button class="fadeInRight" 
+        *ngFor="let fab of config.fabs | transformButtons : ButtonTypes.Fab | reverseArray; trackBy: trackByFab" 
+        [config]="fab">
+      </app-button>
+  </div>
 
-    <app-button *ngIf="config?.searchBar" [config]="{
-        callback: toggleSearchBar, 
-        type: ButtonTypes.Icon,
-        aria: 'Tilbake',
-        icon: 'search'}">
-    </app-button>
-
-    <app-button *ngFor="let button of config?.buttons | transformButtons: ButtonTypes.Icon" [config]="button">
-    </app-button>
-
-  </ng-container>
-
-</mat-toolbar>
-
-<ng-template #searchBarContent>
-    <app-button [config]="{
-      callback: toggleSearchBar, 
-      type: ButtonTypes.Icon,
-      aria: 'Tilbake',
-      icon: 'close'}">
-    </app-button>
-
-    <input #searchInput appInputListener (inputChanged)="handleSearchFn($event);" fxFlex
-      [value]="config.searchBar.initialValue || ''" [placeholder]="config.searchBar.placeholder" class="mt-1 mb-1 p-2 pl-3 mr-1"
-      style="background:white;border:none;border-radius:10px;">
-</ng-template>
+</div>
