--- a/src/app/timesheet-modules/user-timesheet-list/user-timesheet-week-list/user-timesheet-week-list.component.html
+++ b/src/app/timesheet-modules/user-timesheet-list/user-timesheet-week-list/user-timesheet-week-list.component.html
@@ -1,15 +1,19 @@
-<div class="h-100 fadeInLeft max-width" fxLayout="column" fxLayoutAlign="start stretch">
-    <ng-container *ngIf="summaries$ | async else noContent; let summaries">
+<app-main-top-nav *ngIf="vm$ | async; let vm" [config]="vm.navConfig">
+
+    <div class="h-100 fadeInLeft max-width" fxLayout="column" fxLayoutAlign="start stretch">
+
         <cdk-virtual-scroll-viewport itemSize="78" maxBufferPx="800" minBufferPx="800" fxFlex 
-            *ngIf="summaries?.length else noContent">
+            *ngIf="vm.content?.length else noContent">
             <div class="app-card mat-elevation-z2 m-1" matRipple
-                *cdkVirtualFor="let summary of summaries; trackBy: trackByWeekNr; templateCacheSize:0" 
+                *cdkVirtualFor="let summary of vm.content; trackBy: trackByWeekNr; templateCacheSize:0" 
                 (click)="goToWeekView(summary.year, summary.week)">
                 <app-timesheet-summary-card-content [summary]="summary"></app-timesheet-summary-card-content>
             </div>
         </cdk-virtual-scroll-viewport>
-    </ng-container>
-</div>
+  
+    </div>
+
+</app-main-top-nav>
 
 <ng-template #noContent>
     <span class="ppt-5 text-center w-100">
