--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,53 +1,56 @@
-<div class="p-2 max-width" style="position:relative">
+<app-home-top-nav>
+  <div class="p-2 max-width" style="position:relative">
 
-  <div fxLayout="row" fxLayoutGap="8px">
-    <span class="mat-elevation-z2 bg-foreground route-anim-block text-center p-6" fxFlex="50" matRipple
-      [routerLink]="['/oppdrag']">
-      <mat-icon class="scale-150 mb-1">view_list</mat-icon><br />
-      <span>Oppdrag</span>
-    </span>
-    <span *ifRole="rolePresets.Internal" class="mat-elevation-z2 bg-foreground route-anim-block text-center p-6"
-      fxFlex="50" matRipple [routerLink]="['/mine-timer']">
-      <mat-icon class="scale-150 mb-1">timer</mat-icon><br />
-      <span>Timer</span>
-    </span>
-    <span *ifRole="rolePresets.External" class="mat-elevation-z2 bg-foreground route-anim-block text-center p-6"
-      fxFlex="50" matRipple [routerLink]="['/profil']">
-      <mat-icon class="scale-150">person</mat-icon><br />
-      <span>Profil</span>
-    </span>
+    <div fxLayout="row" fxLayoutGap="8px">
+      <span class="mat-elevation-z2 bg-foreground route-anim-block text-center p-6" fxFlex="50" matRipple
+        [routerLink]="['/oppdrag']">
+        <mat-icon class="scale-150 mb-1">view_list</mat-icon><br />
+        <span>Oppdrag</span>
+      </span>
+      <span *ifRole="rolePresets.Internal" class="mat-elevation-z2 bg-foreground route-anim-block text-center p-6"
+        fxFlex="50" matRipple [routerLink]="['/mine-timer']">
+        <mat-icon class="scale-150 mb-1">timer</mat-icon><br />
+        <span>Timer</span>
+      </span>
+      <span *ifRole="rolePresets.External" class="mat-elevation-z2 bg-foreground route-anim-block text-center p-6"
+        fxFlex="50" matRipple [routerLink]="['/profil']">
+        <mat-icon class="scale-150">person</mat-icon><br />
+        <span>Profil</span>
+      </span>
+    </div>
+  
+    <ng-container *ifRole="[Roles.Leder]">
+      <span class="mat-body-2 route-anim-block">Administrering</span>
+  
+      <app-list-card 
+        [config]="{startIcon:'date_range', panelClass:'route-anim-block'}" 
+        [routerLink]="['/timeadministrering']">Administrer timer
+      </app-list-card>
+  
+      <app-list-card
+        [config]="{startIcon:'dns', panelClass:'route-anim-block'}" 
+        [routerLink]="['/data']">Administrer data
+      </app-list-card>
+  
+      <app-list-card
+        [config]="{startIcon:'people', panelClass:'route-anim-block'}" 
+        [routerLink]="['/brukere']">Administrer brukere
+      </app-list-card>
+  
+      <span class="mat-body-2 route-anim-block">Statistikk</span>
+  
+      <app-list-card
+        [config]="{startIcon:'assessment', panelClass:'route-anim-block'}" 
+        [routerLink]="['/timestatistikk']">Timestatistikk
+      </app-list-card>
+    </ng-container>
+  
+    <span class="mat-body-2 route-anim-block">Sist besøkte oppdrag</span>
+    <app-list-card *ngFor="let mission of missionHistory$ | async" 
+      [config]="{startIcon:'history', panelClass:'route-anim-block', endIcon: mission.finished ? 'check':'chevron_right'}" 
+      [routerLink]="['/oppdrag', mission.id, 'detaljer']">{{mission.address}}
+    </app-list-card>
+  
   </div>
+</app-home-top-nav>
 
-  <ng-container *ifRole="[Roles.Leder]">
-    <span class="mat-body-2 route-anim-block">Administrering</span>
-
-    <app-list-card 
-      [config]="{startIcon:'date_range', panelClass:'route-anim-block'}" 
-      [routerLink]="['/timeadministrering']">Administrer timer
-    </app-list-card>
-
-    <app-list-card
-      [config]="{startIcon:'dns', panelClass:'route-anim-block'}" 
-      [routerLink]="['/data']">Administrer data
-    </app-list-card>
-
-    <app-list-card
-      [config]="{startIcon:'people', panelClass:'route-anim-block'}" 
-      [routerLink]="['/brukere']">Administrer brukere
-    </app-list-card>
-
-    <span class="mat-body-2 route-anim-block">Statistikk</span>
-
-    <app-list-card
-      [config]="{startIcon:'assessment', panelClass:'route-anim-block'}" 
-      [routerLink]="['/timestatistikk']">Timestatistikk
-    </app-list-card>
-  </ng-container>
-
-  <span class="mat-body-2 route-anim-block">Sist besøkte oppdrag</span>
-  <app-list-card *ngFor="let mission of missionHistory$ | async" 
-    [config]="{startIcon:'history', panelClass:'route-anim-block', endIcon: mission.finished ? 'check':'chevron_right'}" 
-    [routerLink]="['/oppdrag', mission.id, 'detaljer']">{{mission.address}}
-  </app-list-card>
-
-</div>
