--- a/src/app/shared/components/main-top-nav/detail-top-nav-bar/detail-top-nav-bar.component.scss
+++ b/src/app/shared/components/main-top-nav/detail-top-nav-bar/detail-top-nav-bar.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles/variables';
+@import '../../../../../styles/variables';
 
 .container {
     position:relative;
@@ -36,7 +36,7 @@ mat-toolbar-single-row.detail-nav{
   min-height:40px!important;
 } 
 
-.overlay{
+::ng-deep.detail-navbar-overlay{
     position: absolute;
     left: 0;
     right: 0;
@@ -44,12 +44,12 @@ mat-toolbar-single-row.detail-nav{
     color:white;
 }
 
-.overlay-top{
+::ng-deep.detail-navbar-overlay-top{
     top: 0;
     background-color:rgba(0,0,0,.3);
 }
 
-.overlay-bottom{
+.detail-navbar-overlay-bottom{
     bottom: 0;
     pointer-events:none;
 }
