--- a/src/app/timesheet-modules/timesheet-admin/timesheet-admin-list/timesheet-admin-list.component.html
+++ b/src/app/timesheet-modules/timesheet-admin/timesheet-admin-list/timesheet-admin-list.component.html
@@ -1,14 +1,16 @@
-<div class="h-100 max-width" fxLayout="column" fxLayoutAlign="start stretch" *ngIf="timesheets$ | async; let timesheets">
-    <ng-container *ngIf="!timesheets || timesheets.length == 0" [ngTemplateOutlet]="noContent"></ng-container>
-
-    <cdk-virtual-scroll-viewport itemSize="108" maxBufferPx="800" minBufferPx="800" fxFlex>
-        <div class="m-1" *cdkVirtualFor="let timesheet of timesheets; trackBy: trackById">
-            <app-timesheet-card adminView="true" [timesheet]="timesheet"
-                (statusChanged)="changeTimesheetStatus($event.id, $event.status)">
-            </app-timesheet-card>
-        </div>
-    </cdk-virtual-scroll-viewport>
-</div>
+<app-main-top-nav *ngIf="vm$ | async; let vm" [config]="vm.navConfig">
+    <div class="h-100 max-width" fxLayout="column" fxLayoutAlign="start stretch" *ngIf="vm.content else loading">
+        <ng-container *ngIf="vm.content.length == 0" [ngTemplateOutlet]="noContent"></ng-container>
+    
+        <cdk-virtual-scroll-viewport itemSize="108" maxBufferPx="800" minBufferPx="800" fxFlex>
+            <div class="m-1" *cdkVirtualFor="let timesheet of vm.content; trackBy: trackById">
+                <app-timesheet-card adminView="true" [timesheet]="timesheet"
+                    (statusChanged)="changeTimesheetStatus($event.id, $event.status)">
+                </app-timesheet-card>
+            </div>
+        </cdk-virtual-scroll-viewport>
+    </div>
+</app-main-top-nav>
 
 <ng-template #noContent>
     <div class="w-100 text-center mt-2 mat-h3">Fant ingen timer!</div>
