--- a/src/app/timesheet-modules/timesheet-admin/timesheet-admin-user-list/timesheet-admin-user-list.component.html
+++ b/src/app/timesheet-modules/timesheet-admin/timesheet-admin-user-list/timesheet-admin-user-list.component.html
@@ -1,11 +1,15 @@
-<div class="p-2 max-width" *ngIf="users$ | async else loading; let users">
+<app-main-top-nav [config]="{title: 'Administrer timer'}">
+
+    <div class="p-2 max-width" *ngIf="users$ | async else loading; let users">
         <app-list-card *ngFor="let user of users" 
             [config]="{startIcon:'person', endIcon: 'chevron_right'}"
             (click)="goToWeekList(user.userName)"> 
                 {{user.firstName + ' ' +user.lastName}}
         </app-list-card>
         <ng-container *ngIf="users.length == 0" [ngTemplateOutlet]="noUsers"></ng-container>
-</div>
+    </div>  
+
+</app-main-top-nav>
 
 <ng-template #noUsers>
     <div class="w-100 text-center mt-2 mat-h3">Fant ingen ansatte!</div>
