--- a/src/app/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list.component.html
+++ b/src/app/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list.component.html
@@ -1,13 +1,16 @@
-<div fxLayout="column" fxLayoutAlign="start stretch" class="h-100 max-width">
-    <ng-container *ngIf="timesheets$ | async else noContent; let timesheets">
-        <cdk-virtual-scroll-viewport *ngIf="timesheets?.length else noContent" itemSize="148" maxBufferPx="800" minBufferPx="800" fxFlex class="fadeInRight">
-            <div class="m-1" *cdkVirtualFor="let timesheet of timesheets; trackBy: trackByTimesheet">
+<app-main-top-nav *ngIf="vm$ | async; let vm" [config]="vm.navConfig">
+
+    <div fxLayout="column" fxLayoutAlign="start stretch" class="h-100 max-width">
+        <cdk-virtual-scroll-viewport *ngIf="vm.content?.length else noContent" class="fadeInRight"
+            itemSize="148" maxBufferPx="800" minBufferPx="800" fxFlex>
+            <div class="m-1" *cdkVirtualFor="let timesheet of vm.content; trackBy: trackByTimesheet">
                 <app-timesheet-card [timesheet]="timesheet" (editClicked)="openTimesheetForm($event)">
                 </app-timesheet-card>
             </div>
         </cdk-virtual-scroll-viewport>
-    </ng-container>
-</div>
+    </div> 
+
+</app-main-top-nav>
 
 <ng-template #noContent>
     <span class="ppt-5 text-center w-100">
