--- a/src/app/timesheet-modules/user-timesheet-list/user-timesheet-week-view/user-timesheet-week-view.component.html
+++ b/src/app/timesheet-modules/user-timesheet-list/user-timesheet-week-view/user-timesheet-week-view.component.html
@@ -1,32 +1,35 @@
-<div class="h-100" fxLayout="row" fxLayoutAlign="start stretch" 
-    *ngIf="summaries$ | async; let summaries"
-    (swiperight)="previousWeek()" 
-    (swipeleft)="nextWeek()">
-      <ng-container *ngFor="let weekDay of ((isXs$ | async) ? 5 : 7) | arrayFromNumber"> 
+<app-main-top-nav *ngIf="vm$ | async; let vm" [config]="vm.navConfig">
 
-          <div class="w-100" fxLayout="column" fxLayoutAlign="start center">
+  <div class="h-100" fxLayout="row" fxLayoutAlign="start stretch" *ngIf="vm.content"
+  (swiperight)="previousWeek()" 
+  (swipeleft)="nextWeek()">
 
-            <app-timesheet-day-label class="w-100 mb-1" style="z-index:1"
-              [date]="weekCriteria | getDateByDateParams : weekDay"
-              (labelClicked)="openTimesheetForm(null, {date: $event})">
-            </app-timesheet-day-label>
+    <ng-container *ngFor="let weekDay of ((isXs$ | async) ? 5 : 7) | arrayFromNumber"> 
 
-            <div class="w-100" style="padding: 0 2px 0 2px; z-index:0" 
-              fxLayout="column" fxLayoutAlign="start stretch" fxFlex>
-              <ng-container *ngFor="let timesheet of summaries[weekDay]?.timesheets | sortByDate: 'startTime' : 'asc'; trackBy: trackByTimesheet;" >
-                <app-timesheet-mission-bar class="mb-1 fadeInDown"                      
-                  [timesheet]="timesheet"
-                  (barClicked)="timesheet.status ? openTimesheetCard(timesheet.id) : openTimesheetForm(timesheet.id)">
-                </app-timesheet-mission-bar>
-              </ng-container>
-            </div>
+        <div class="w-100" fxLayout="column" fxLayoutAlign="start center">
 
+          <app-timesheet-day-label class="w-100 mb-1" style="z-index:1"
+            [date]="weekCriteria | getDateByDateParams : weekDay"
+            (labelClicked)="openTimesheetForm(null, {date: $event})">
+          </app-timesheet-day-label>
+
+          <div class="w-100" style="padding: 0 2px 0 2px; z-index:0" 
+            fxLayout="column" fxLayoutAlign="start stretch" fxFlex>
+            <ng-container *ngFor="let timesheet of vm.content[weekDay]?.timesheets | sortByDate: 'startTime' : 'asc'; trackBy: trackByTimesheet;" >
+              <app-timesheet-mission-bar class="mb-1 fadeInDown"                      
+                [timesheet]="timesheet"
+                (barClicked)="timesheet.status ? openTimesheetCard(timesheet.id) : openTimesheetForm(timesheet.id)">
+              </app-timesheet-mission-bar>
+            </ng-container>
           </div>
-          
-          <mat-divider vertical="true" *ngIf="weekDay !== 7"></mat-divider>
-      </ng-container>
 
-</div>
+        </div>
+        
+        <mat-divider vertical="true" *ngIf="weekDay !== 7"></mat-divider>
+    </ng-container>
 
+  </div>
+
+</app-main-top-nav>
 
 <router-outlet></router-outlet>
