--- a/src/app/mission-modules/mission-image-list/mission-image-list/mission-image-list.component.html
+++ b/src/app/mission-modules/mission-image-list/mission-image-list/mission-image-list.component.html
@@ -10,7 +10,7 @@
 </app-main-top-nav>
 
 <ng-template #imgTemplate let-entity>
-    <img appImageErrorReloader class="entity-card fadeIn"  alt="oppdragsbilde"
+    <img appImageErrorReloader class="entity-card"  alt="oppdragsbilde"
                 [src]="entity | appFileUrl: 'thumbnails'"/> 
 </ng-template>
 
