--- a/src/app/mission-modules/mission-note-list/mission-note-list/note-card/note-card.component.html
+++ b/src/app/mission-modules/mission-note-list/mission-note-list/note-card/note-card.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="column" fxLayoutAlign="space-between start" fxLayoutGap="5px"
-    class="app-card m-1 p-2 mat-elevation-z2 fadeIn" *ngIf="note">
+    class="app-card m-1 p-2 mat-elevation-z2" *ngIf="note">
 
     <ng-container *ngIf="note.title">
 
