--- a/src/app/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list.component.html
+++ b/src/app/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list.component.html
@@ -1,7 +1,7 @@
 <app-main-top-nav *ngIf="vm$ | async; let vm" [config]="vm.navConfig">
 
     <div fxLayout="column" fxLayoutAlign="start stretch" class="h-100 max-width">
-        <cdk-virtual-scroll-viewport *ngIf="vm.content?.length else noContent" class="fadeInRight"
+        <cdk-virtual-scroll-viewport *ngIf="vm.content?.length else noContent"
             itemSize="148" maxBufferPx="800" minBufferPx="800" fxFlex>
             <div class="m-1" *cdkVirtualFor="let timesheet of vm.content; trackBy: trackByTimesheet">
                 <app-timesheet-card [timesheet]="timesheet" (editClicked)="openTimesheetForm($event)">
