--- a/src/app/shared/components/main-top-nav/main-top-nav-bar/main-top-nav-bar.component.html
+++ b/src/app/shared/components/main-top-nav/main-top-nav-bar/main-top-nav-bar.component.html
@@ -1,6 +1,7 @@
-<mat-toolbar #navBar *ngIf="config" [ngClass]="stylingClass">
+<mat-toolbar #navBar *ngIf="config" [ngClass]="stylingClass" class="mat-elevation-z3">
 
     <ng-container *ngIf="searchBarHidden || !config?.searchBar else searchBarContent">
+        
         <app-button *ngIf="config?.backFn else menuBtn" [config]="{
             callback: config.backFn, 
             params: config.backFnParams,
@@ -16,7 +17,7 @@
             </button>
         </ng-template>
 
-        <span class="mr-auto">
+        <span class="mr-auto" fxLayout="row" fxLayoutAlign="start center">
             <ng-container *ngIf="config.title">
                 <span *ngIf="!config?.backFn else noLinkTitle" ngClass.xs="ml-1" ngClass.gt-xs="ml-2"
                     [routerLink]="['/hjem']">{{ config?.title || "Hjem" }}</span>
@@ -24,7 +25,7 @@
                 </ng-template>
             </ng-container>
             <mat-icon *ngIf="config?.subIcon" class="scale-75">{{ config.subIcon }}</mat-icon>
-            <span class="ml-1 mat-caption">{{ config?.subTitle }}</span>
+            <span class="mat-caption">{{ config?.subTitle }}</span>
         </span>
 
         <mat-spinner *ngIf="loading$ |  async" diameter="24" color="accent" class="mr-2"></mat-spinner>
@@ -32,7 +33,7 @@
         <app-button *ngIf="config?.searchBar" [config]="{
             callback: toggleSearchBar, 
             type: ButtonTypes.Icon,
-            aria: 'Tilbake',
+            aria: 'Søk',
             icon: 'search'}">
         </app-button>
 
